src/objects/CC_Agent_Interface__c.object
<CustomObject>
    <description>ClearInteract Call Center Agent Interface object.
Used for push topic and streaming api in service cloud console component.</description>
    <fields>
        <fullName>Bot_Data__c</fullName>
        <description>Bot data, semicolon separated</description>
        <label>Bot Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Id__c</fullName>
        <description>External call id in ClearInteract</description>
        <label>Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Agent_Id__c</fullName>
        <description>External id of the agent in the ClearInteract Call Center solution</description>
        <externalId>true</externalId>
        <inlineHelpText>ClearInteract agent id</inlineHelpText>
        <label>External Agent Id</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Phone number (A-number, blank, #, unknown, withheld) or email sender.</description>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <description>External item id from ClearInteract</description>
        <label>Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Call_Id__c</fullName>
        <description>Original call id. Each item sent will have the same call id if same inbound call (same customer call).</description>
        <label>Original Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <description>Queue Id (Task id)</description>
        <label>Queue Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Chat_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls which Agent can see and select the Request Chat Agent Button</description>
        <inlineHelpText>Controls which Agent can see and select the Request Chat Agent Button</inlineHelpText>
        <label>Show Chat Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Phone number (B-number) or email receiver.</description>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Salesforce user</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Agent_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Agent Interface</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>External_Agent_Id__c</columns>
        <columns>Bot_Data__c</columns>
        <columns>Call_Id__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>Item_Id__c</columns>
        <columns>Queue_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CC Agent Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Agent Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>